tests/snapshots/execution_spec__rest-api-error.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 500,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "internal: non-null types require a return value",
        "locations": [
          {
            "line": 3,
            "column": 5
          }
        ],
        "path": [
          "user",
          "id"
        ]
      }
    ]
  }
}
