tests/snapshots/execution_spec__rest-api-post.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  user(id: Int!): User
}

type User {
  id: Int!
  name: String!
}

schema {
  query: Query
}
