tests/snapshots/execution_spec__showcase.md_assert_3.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": " --> 1:1\n  |\n1 | \"dsjfsjdfjdsfjkdskjfjkds\"\n  | ^---\n  |\n  = expected type_system_definition",
        "locations": [
          {
            "line": 1,
            "column": 1
          }
        ]
      }
    ]
  }
}
