tests/snapshots/execution_spec__showcase.md_assert_4.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Unexpected GraphQL Request: invalid type: map, expected a string at line 1 column 9"
      }
    ]
  }
}
