tests/snapshots/execution_spec__showcase.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  not_user: User
}

scalar Url

type User {
  not_id: Int
  not_name: String
}

schema {
  query: Query
}
